<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/accesso_background"
    android:gravity="center"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="#D2F9FF"
            android:shadowColor="#D2F9FF"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:fontFamily="@font/winkyroughregular"
            android:text="ACCEDI"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/account_circle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Email"
            android:textColor="@color/black"
            android:textColorHint="#737373"
            android:textSize="18sp"
            android:background="@drawable/bordi_tondi"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Password"
            android:textColor="@color/black"
            android:textColorHint="#737373"
            android:textSize="18sp"
            android:background="@drawable/bordi_tondi"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/etPassword"/>
        
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Accedi"
            android:padding="18dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:backgroundTint="#05A3CA"/>

        <TextView
            android:id="@+id/tvVaiAllaRegistrazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Non hai un account?  Registrati!"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>


